# pluginx

./: .gitignore  Cargo.toml  README.md  build.rs  client  server
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
examples/shared/: Cargo.toml  build.rs
examples/shared/proto/: example.proto  kv.proto
examples/shared/src/: lib.rs
proto/: grpc_broker.proto  grpc_controller.proto  grpc_stdio.proto
src/: broker.rs  constant.rs  error.rs  lib.rs  plugin.rs  runner.rs
src/client/: config.rs  mod.rs
src/common/: client.rs  server.rs  utils.rs
src/handshake/: config.rs  message.rs  mod.rs
src/meta_plugin/: broker.rs  controller.rs  mod.rs  stdio.rs
src/server/: builtin.rs  config.rs  mod.rs  util.rs  utils.rs
