[package]
name = "pluginx"
version = "0.0.0"
authors = ["Konge <zkonge@outlook.com>"]
edition = "2021"

[dependencies]
futures = { version = "0.3.30", default-features = false, features = ["std"] }
http = { version = "1.1.0", default-features = false }
ahash = "0.8.11"
bytes = "1.6.1"
hyper-util = { version = "0.1.6", features = ["tokio"] }
prost = "0.13.1"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
tempfile = "3.10.1"
thiserror = "1.0.63"
tokio = { version = "1.38.1", features = ["net", "process"] }
tokio-stream = { version = "0.1.15", default-features = false, features = [
    "net",
] }
tonic = "0.12.1"
tower = { version = "0.4.13", default-features = false }

tonic-health = { version = "0.12.1", optional = true }

[build-dependencies]
tonic-build = "0.12.1"

[features]
default = ["health"]
client = []
server = []
health = ["dep:tonic-health"]

[workspace]
members = ["examples/*"]
