[package]
name = "pluginx"
version = "0.0.0"
authors = ["Konge <zkonge@outlook.com>"]
edition = "2021"

[dependencies]
futures-util = { version = "0.3.31", default-features = false }
http = { version = "1.1.0", default-features = false }
foldhash = "0.1.3"
bytes = "1.9.0"
hyper-util = { version = "0.1.10", features = ["tokio"] }
prost = "0.13.1"
rand = "0.9.1"
serde = { version = "1.0.215", features = ["derive"] }
tempfile = "3.14.0"
thiserror = "2.0.3"
tokio = { version = "1.38.1", features = ["net", "process"] }
tokio-stream = { version = "0.1.16", default-features = false, features = [
    "net",
] }
tonic = "0.13.1"
tower-service = "0.3.3"

tonic-health = { version = "0.13.1", optional = true }

[build-dependencies]
tonic-build = "0.13.1"

[features]
default = ["health"]
client = []
server = []
health = ["dep:tonic-health"]

[workspace]
members = ["examples/*"]
