[package]
name = "pluginx"
version = "0.0.0"
authors = ["Konge <zkonge@outlook.com>"]
edition = "2024"

[dependencies]
futures-util = { version = "0.3.31", default-features = false }
http = { version = "1.4.0", default-features = false }
foldhash = "0.2.0"
bytes = "1.11.0"
hyper-util = { version = "0.1.19", features = ["tokio"] }
prost = "0.14.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.24.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["net", "process", "signal"] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
    "net",
] }
tower-service = "0.3.3"
tonic = "0.14.2"
tonic-health = { version = "0.14.2", optional = true }
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"

[features]
default = ["health"]
client = []
server = []
health = ["dep:tonic-health"]

[workspace]
resolver = "3"
members = ["examples/*"]
