[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = { version = "0.14.1" }
tonic = { version = "0.14.2", default-features = false, features = ["codegen"] }
tonic-prost = { version = "0.14.2" }
pluginx = { path = "../../" }

[build-dependencies]
tonic-prost-build = "0.14.2"
